--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,4 @@
+04.05.18 updated CompToxFullCSVtoLocalCSVterms; fixed links in documentation etc in #1, v0.1.6 
 26.04.18 added addMissingInChIKeys.CSV, adding to git, v0.1.5
 23.04.18 fixes to adduct settings in MetFragConfig and related functions, no version bump.
 19.04.18 added MetFragConfigR, processSDF, fixed documentation & description. v0.1.4
