--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,4 @@
+13.11.18 added pattern to getMBRecordInfo, updated docs, no version bump. 
 07.11.18 fixed findMz and hardcoded names in RMB_EIC_prescreen, no version bump.
 25.07.18 fixed adduct check in MetFragConfig, added RMB_EIC_prescreen, v0.1.7
 11.05.18 fixed one link in documentation, no version bump
