fixed UDS function for non localCSV
...ensures that users can change weighting for PubChem and ChemSpider as well, not just localCSV

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,4 @@
+22.01.20 fixed minor bug in UDS in MetFragConfig, v0.1.9
 18.12.18 fixed minor typo in MetFragConfig documentation, no version bump
 06.12.18 added tryCatch to RMB_EIC_prescreen, v0.1.8
 13.11.18 added pattern to getMBRecordInfo, updated docs, no version bump. 
